--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ JuMP = "1.29.3"
 MutableArithmetics = "1"
 Reexport = "0.2, 1"
 julia = "1.10"
-Interpolations = "0.16"
+Interpolations = "0.15, 0.16"
 MathOptAI = "0.1.18"
 
 [extras]
